Fix spacing mobile

--- a/packages/prop-house-webapp/src/components/InspirationCard/InspirationCard.module.css
+++ b/packages/prop-house-webapp/src/components/InspirationCard/InspirationCard.module.css
@@ -15,3 +15,9 @@
 .arrow {
   float: right;
 }
+
+@media (max-width: 1200px) {
+  .itemCard {
+    margin-bottom: 1.4rem;
+  }
+}
